# api-mobilelegends

./: .env.example  .env.test  .flake8  .gitignore  .pylintrc  CHANGELOG.md  CHANGES.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HERO_SYSTEM_UPDATE.md  LICENSE  LOG.md  MIGRATION.md  PROJECT_STRUCTURE.md  README.md  RESTRUCTURING.md  SECURITY.md  config.py  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  statistics_hero.ipynb  test_api.py  utils.py  vercel.json
.github/: FUNDING.yml
.github/workflows/: python-publish.yml
MLBB/: asgi.py  config.py  settings.py  urls.py  wsgi.py
OpenMLBB/: README.md
app/: __init__.py  main.py
app/api/: dependencies.py
app/core/: __init__.py  config.py  docs.py  enums.py  errors.py  exceptions.py  filters.py  hero_limits.py  http.py  logging.py  param_descriptions.py  security.py
app/models/: __init__.py  hero.py  response.py
app/schemas/: __init__.py  academy.py  addon.py  mlbb.py  user.py
app/services/: __init__.py  academy.py  addon.py  calculation_service.py  identity.py  mlbb.py  mlbb_service.py  user.py
docs/: ARCHITECTURE.md  USAGE.md
llm/: CONTEXT.md
mlbb_api/: apps.py  crypto_utils.py  urls.py  utils.py  views.py
mlbb_web/: apps.py  urls.py  views.py
prod/: index.py
routers/: __init__.py  additional.py  mlbb.py  mplid.py
staticfiles/: web.css
templates/: base.html  footer.html  navbar.html
tests/: conftest.py  test_client_ip.py  test_endpoints.py  test_user_router.py  test_validation_errors.py  test_web_interface.py
(+69 files in other folders)
