[project]
name = "OpenMLBB"
dynamic = ["version"]
description = "Official Python SDK for the MLBB Public Data API"
readme = "OpenMLBB/README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "ridwaanhall" }
]
requires-python = ">=3.10"

dependencies = [
    "fastapi[standard]>=0.135.2",
    "requests>=2.32.0,<3",
    "cryptography==46.0.7",
]

[project.urls]
Homepage = "https://mlbb.rone.dev"
Documentation = "https://mlbb.rone.dev/api/docs"
Repository = "https://github.com/ridwaanhall/api-mobilelegends"
Issues = "https://github.com/ridwaanhall/api-mobilelegends/issues"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "OpenMLBB._version.__version__" }

[tool.setuptools.package-dir]
"" = "OpenMLBB/src"

[tool.setuptools.packages.find]
where = ["OpenMLBB/src"]
include = ["OpenMLBB*"]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "httpx>=0.28.1",
    "pytest==9.0.3",
]
